@@ -5,10 +5,12 @@ import bio.terra.common.ExceptionUtils;
 import bio.terra.common.ValidationUtils;
 import bio.terra.common.exception.ErrorReportException;
 import bio.terra.common.iam.AuthenticatedUserRequest;
+import bio.terra.model.DatasetRequestModelPolicies;
 import bio.terra.model.PolicyModel;
 import bio.terra.model.RepositoryStatusModelSystems;
 import bio.terra.model.ResourcePolicyModel;
 import bio.terra.model.SamPolicyModel;
+import bio.terra.model.SnapshotRequestModelPolicies;
 import bio.terra.model.UserStatusInfo;
 import bio.terra.service.auth.iam.IamAction;
 import bio.terra.service.auth.iam.IamProviderInterface;
@@ -20,36 +22,43 @@ import bio.terra.service.auth.iam.exception.IamForbiddenException;
 import bio.terra.service.auth.iam.exception.IamInternalServerErrorException;
 import bio.terra.service.auth.iam.exception.IamNotFoundException;
 import bio.terra.service.auth.iam.exception.IamUnauthorizedException;
-import bio.terra.service.configuration.ConfigEnum;
 import bio.terra.service.configuration.ConfigurationService;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.api.client.http.HttpStatusCodes;
 import com.google.common.annotations.VisibleForTesting;
+import io.opentelemetry.instrumentation.annotations.WithSpan;
+import java.math.BigDecimal;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.broadinstitute.dsde.workbench.client.sam.ApiClient;
 import org.broadinstitute.dsde.workbench.client.sam.ApiException;
-import org.broadinstitute.dsde.workbench.client.sam.api.GoogleApi;
 import org.broadinstitute.dsde.workbench.client.sam.api.ResourcesApi;
 import org.broadinstitute.dsde.workbench.client.sam.api.StatusApi;
 import org.broadinstitute.dsde.workbench.client.sam.api.UsersApi;
+import org.broadinstitute.dsde.workbench.client.sam.model.AccessPolicyMembershipRequest;
 import org.broadinstitute.dsde.workbench.client.sam.model.AccessPolicyMembershipV2;
 import org.broadinstitute.dsde.workbench.client.sam.model.AccessPolicyResponseEntryV2;
 import org.broadinstitute.dsde.workbench.client.sam.model.CreateResourceRequestV2;
 import org.broadinstitute.dsde.workbench.client.sam.model.ErrorReport;
+import org.broadinstitute.dsde.workbench.client.sam.model.FullyQualifiedResourceId;
+import org.broadinstitute.dsde.workbench.client.sam.model.ManagedResourceGroupCoordinates;
+import org.broadinstitute.dsde.workbench.client.sam.model.RequesterPaysSignedUrlRequest;
 import org.broadinstitute.dsde.workbench.client.sam.model.RolesAndActions;
+import org.broadinstitute.dsde.workbench.client.sam.model.SyncReportEntry;
 import org.broadinstitute.dsde.workbench.client.sam.model.SystemStatus;
+import org.broadinstitute.dsde.workbench.client.sam.model.UserIdInfo;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -62,50 +71,19 @@ public class SamIam implements IamProviderInterface {
 
   private final SamConfiguration samConfig;
   private final ConfigurationService configurationService;
+  private final SamApiService samApiService;
 
   @Autowired
-  public SamIam(SamConfiguration samConfig, ConfigurationService configurationService) {
+  public SamIam(
+      SamConfiguration samConfig,
+      ConfigurationService configurationService,
+      SamApiService samApiService) {
     this.samConfig = samConfig;
     this.configurationService = configurationService;
+    this.samApiService = samApiService;
   }
 
   private static final Logger logger = LoggerFactory.getLogger(SamIam.class);
-
-  private ApiClient getApiClient(String accessToken) {
-    ApiClient apiClient = new ApiClient();
-    apiClient.setAccessToken(accessToken);
-    apiClient.setUserAgent("OpenAPI-Generator/1.0.0 java"); // only logs an error in sam
-    apiClient.setConnectTimeout(
-        configurationService.getParameterValue(ConfigEnum.SAM_OPERATION_TIMEOUT_SECONDS));
-    return apiClient.setBasePath(samConfig.getBasePath());
-  }
-
-  private ApiClient getUnauthApiClient() {
-    ApiClient apiClient = new ApiClient();
-    apiClient.setUserAgent("OpenAPI-Generator/1.0.0 java"); // only logs an error in sam
-    apiClient.setBasePath(samConfig.getBasePath());
-    return apiClient;
-  }
-
-  @VisibleForTesting
-  public ResourcesApi samResourcesApi(String accessToken) {
-    return new ResourcesApi(getApiClient(accessToken));
-  }
-
-  @VisibleForTesting
-  StatusApi samStatusApi() {
-    return new StatusApi(getUnauthApiClient());
-  }
-
-  @VisibleForTesting
-  GoogleApi samGoogleApi(String accessToken) {
-    return new GoogleApi(getApiClient(accessToken));
-  }
-
-  @VisibleForTesting
-  UsersApi samUsersApi(String accessToken) {
-    return new UsersApi(getApiClient(accessToken));
-  }
 
   /**
    * Asks SAM if a user can do an action on a resource. This method converts the SAM-specific
@@ -132,7 +110,7 @@ public class SamIam implements IamProviderInterface {
       String resourceId,
       IamAction action)
       throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     boolean authorized =
         samResourceApi.resourcePermissionV2(
             iamResourceType.toString(), resourceId, action.toString());
@@ -140,6 +118,7 @@ public class SamIam implements IamProviderInterface {
     return authorized;
   }
 
+  @WithSpan
   @Override
   public Map<UUID, Set<IamRole>> listAuthorizedResources(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType)
@@ -150,7 +129,7 @@ public class SamIam implements IamProviderInterface {
 
   private Map<UUID, Set<IamRole>> listAuthorizedResourcesInner(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType) throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     return samResourceApi.listResourcesAndPoliciesV2(iamResourceType.getSamResourceName()).stream()
         .filter(resource -> ValidationUtils.isValidUuid(resource.getResourceId()))
         .collect(
@@ -165,6 +144,7 @@ public class SamIam implements IamProviderInterface {
                     Collectors.toSet())));
   }
 
+  @WithSpan
   @Override
   public List<String> listActions(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType, String resourceId)
@@ -176,10 +156,11 @@ public class SamIam implements IamProviderInterface {
   private List<String> listActionsInner(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType, String resourceId)
       throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     return samResourceApi.resourceActionsV2(iamResourceType.toString(), resourceId);
   }
 
+  @WithSpan
   @Override
   public boolean hasAnyActions(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType, String resourceId)
@@ -209,39 +190,55 @@ public class SamIam implements IamProviderInterface {
   private void deleteResourceInner(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType, String resourceId)
       throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     samResourceApi.deleteResourceV2(iamResourceType.toString(), resourceId);
   }
 
   @Override
   public Map<IamRole, String> createDatasetResource(
-      AuthenticatedUserRequest userReq, UUID datasetId) throws InterruptedException {
-    SamRetry.retry(configurationService, () -> createDatasetResourceInnerV2(userReq, datasetId));
+      AuthenticatedUserRequest userReq, UUID datasetId, DatasetRequestModelPolicies policies)
+      throws InterruptedException {
+    SamRetry.retry(
+        configurationService, () -> createDatasetResourceInnerV2(userReq, datasetId, policies));
     return SamRetry.retry(
         configurationService, () -> syncDatasetResourcePoliciesInner(userReq, datasetId));
   }
 
-  private void createDatasetResourceInnerV2(AuthenticatedUserRequest userReq, UUID datasetId)
+  private void createDatasetResourceInnerV2(
+      AuthenticatedUserRequest userReq, UUID datasetId, DatasetRequestModelPolicies policies)
       throws ApiException {
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
+    CreateResourceRequestV2 req = createDatasetResourceRequest(userReq, datasetId, policies);
+    samResourceApi.createResourceV2(IamResourceType.DATASET.toString(), req);
+  }
+
+  @VisibleForTesting
+  CreateResourceRequestV2 createDatasetResourceRequest(
+      AuthenticatedUserRequest userReq, UUID datasetId, DatasetRequestModelPolicies policies) {
+    policies = Optional.ofNullable(policies).orElse(new DatasetRequestModelPolicies());
     UserStatusInfo userStatusInfo = getUserInfoAndVerify(userReq);
-    CreateResourceRequestV2 req = new CreateResourceRequestV2();
-    req.setResourceId(datasetId.toString());
+
+    CreateResourceRequestV2 req = new CreateResourceRequestV2().resourceId(datasetId.toString());
+
     req.putPoliciesItem(
-        IamRole.ADMIN.toString(),
-        createAccessPolicyOneV2(IamRole.ADMIN, samConfig.getAdminsGroupEmail()));
-    req.putPoliciesItem(
-        IamRole.STEWARD.toString(),
-        createAccessPolicyOneV2(IamRole.STEWARD, userStatusInfo.getUserEmail()));
+        IamRole.ADMIN.toString(), createAccessPolicy(IamRole.ADMIN, getAdminEmailList()));
+
+    List<String> stewards = new ArrayList<>();
+    stewards.add(userStatusInfo.getUserEmail());
+    stewards.addAll(ListUtils.emptyIfNull(policies.getStewards()));
+    req.putPoliciesItem(IamRole.STEWARD.toString(), createAccessPolicy(IamRole.STEWARD, stewards));
+
     req.putPoliciesItem(
         IamRole.CUSTODIAN.toString(),
-        createAccessPolicyOneV2(IamRole.CUSTODIAN, userStatusInfo.getUserEmail()));
+        createAccessPolicy(IamRole.CUSTODIAN, policies.getCustodians()));
+
     req.putPoliciesItem(
-        IamRole.SNAPSHOT_CREATOR.toString(), createAccessPolicyV2(IamRole.SNAPSHOT_CREATOR, null));
+        IamRole.SNAPSHOT_CREATOR.toString(),
+        createAccessPolicy(IamRole.SNAPSHOT_CREATOR, policies.getSnapshotCreators()));
 
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    req.authDomain(List.of());
     logger.debug("SAM request: " + req);
-
-    samResourceApi.createResourceV2(IamResourceType.DATASET.toString(), req);
+    return req;
   }
 
   private Map<IamRole, String> syncDatasetResourcePoliciesInner(
@@ -266,58 +263,130 @@ public class SamIam implements IamProviderInterface {
 
   @Override
   public Map<IamRole, String> createSnapshotResource(
-      AuthenticatedUserRequest userReq, UUID snapshotId, List<String> readersList)
+      AuthenticatedUserRequest userReq, UUID snapshotId, SnapshotRequestModelPolicies policies)
       throws InterruptedException {
     SamRetry.retry(
-        configurationService,
-        () -> createSnapshotResourceInnerV2(userReq, snapshotId, readersList));
+        configurationService, () -> createSnapshotResourceInnerV2(userReq, snapshotId, policies));
     return SamRetry.retry(
-        configurationService,
-        () -> syncSnapshotResourcePoliciesInner(userReq, snapshotId, readersList));
+        configurationService, () -> syncSnapshotResourcePoliciesInner(userReq, snapshotId));
   }
 
   private void createSnapshotResourceInnerV2(
-      AuthenticatedUserRequest userReq, UUID snapshotId, List<String> readersList)
+      AuthenticatedUserRequest userReq, UUID snapshotId, SnapshotRequestModelPolicies policies)
       throws ApiException {
-    UserStatusInfo userStatusInfo = getUserInfoAndVerify(userReq);
-    CreateResourceRequestV2 req = new CreateResourceRequestV2();
-    req.setResourceId(snapshotId.toString());
-    req.putPoliciesItem(
-        IamRole.ADMIN.toString(),
-        createAccessPolicyOneV2(IamRole.ADMIN, samConfig.getAdminsGroupEmail()));
-    req.putPoliciesItem(
-        IamRole.STEWARD.toString(),
-        createAccessPolicyOneV2(IamRole.STEWARD, userStatusInfo.getUserEmail()));
-    req.putPoliciesItem(
-        IamRole.READER.toString(), createAccessPolicyV2(IamRole.READER, readersList));
-    req.putPoliciesItem(
-        IamRole.DISCOVERER.toString(), createAccessPolicyV2(IamRole.DISCOVERER, null));
-
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
-    logger.debug("SAM request: " + req);
-
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
+    CreateResourceRequestV2 req = createSnapshotResourceRequest(userReq, snapshotId, policies);
     samResourceApi.createResourceV2(IamResourceType.DATASNAPSHOT.toString(), req);
   }
 
+  @VisibleForTesting
+  CreateResourceRequestV2 createSnapshotResourceRequest(
+      AuthenticatedUserRequest userReq, UUID snapshotId, SnapshotRequestModelPolicies policies) {
+    policies = Optional.ofNullable(policies).orElse(new SnapshotRequestModelPolicies());
+    UserStatusInfo userStatusInfo = getUserInfoAndVerify(userReq);
+    CreateResourceRequestV2 req = new CreateResourceRequestV2().resourceId(snapshotId.toString());
+
+    req.putPoliciesItem(
+        IamRole.ADMIN.toString(), createAccessPolicy(IamRole.ADMIN, getAdminEmailList()));
+
+    List<String> stewards = new ArrayList<>();
+    stewards.add(userStatusInfo.getUserEmail());
+    stewards.addAll(ListUtils.emptyIfNull(policies.getStewards()));
+    req.putPoliciesItem(IamRole.STEWARD.toString(), createAccessPolicy(IamRole.STEWARD, stewards));
+
+    req.putPoliciesItem(
+        IamRole.READER.toString(), createAccessPolicy(IamRole.READER, policies.getReaders()));
+
+    req.putPoliciesItem(
+        IamRole.DISCOVERER.toString(),
+        createAccessPolicy(IamRole.DISCOVERER, policies.getDiscoverers()));
+
+    req.putPoliciesItem(
+        IamRole.AGGREGATE_DATA_READER.toString(),
+        createAccessPolicy(IamRole.AGGREGATE_DATA_READER, policies.getAggregateDataReaders()));
+
+    req.authDomain(List.of());
+    logger.debug("SAM request: " + req);
+    return req;
+  }
+
   private Map<IamRole, String> syncSnapshotResourcePoliciesInner(
-      AuthenticatedUserRequest userReq, UUID snapshotId, List<String> readersList)
-      throws ApiException {
-    // sync the policies for all roles that have read data action
+      AuthenticatedUserRequest userReq, UUID snapshotId) throws ApiException {
     Map<IamRole, String> policies = new HashMap<>();
-    String policy =
-        syncOnePolicy(userReq, IamResourceType.DATASNAPSHOT, snapshotId, IamRole.READER);
-    policies.put(IamRole.READER, policy);
-    policy = syncOnePolicy(userReq, IamResourceType.DATASNAPSHOT, snapshotId, IamRole.STEWARD);
-    policies.put(IamRole.STEWARD, policy);
+    // sync the policies for all roles that have IamAction.READ_DATA
+    for (IamRole role : Arrays.asList(IamRole.STEWARD, IamRole.READER)) {
+      String policy = syncOnePolicy(userReq, IamResourceType.DATASNAPSHOT, snapshotId, role);
+      policies.put(role, policy);
+    }
     return policies;
+  }
+
+  @Override
+  public Map<IamRole, List<String>> createSnapshotBuilderRequestResource(
+      AuthenticatedUserRequest userReq, UUID snapshotId, UUID snapshotBuilderRequestId)
+      throws InterruptedException {
+    var initialRoles = Map.of(IamRole.OWNER, List.of(userReq.getEmail()));
+    SamRetry.retry(
+        configurationService,
+        () ->
+            createSnapshotBuilderRequestResourceInner(
+                userReq, snapshotId, snapshotBuilderRequestId, initialRoles));
+    return initialRoles;
+  }
+
+  @Override
+  public void deleteSnapshotBuilderRequestResource(
+      AuthenticatedUserRequest userReq, UUID snapshotBuilderRequestId) throws InterruptedException {
+    deleteResource(
+        userReq, IamResourceType.SNAPSHOT_BUILDER_REQUEST, snapshotBuilderRequestId.toString());
+  }
+
+  private void createSnapshotBuilderRequestResourceInner(
+      AuthenticatedUserRequest userReq,
+      UUID snapshotId,
+      UUID snapshotBuilderRequestId,
+      Map<IamRole, List<String>> initialRoles)
+      throws ApiException {
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
+    CreateResourceRequestV2 req =
+        createSnapshotBuilderRequestResourceRequest(
+            userReq, snapshotId, snapshotBuilderRequestId, initialRoles);
+    samResourceApi.createResourceV2(IamResourceType.SNAPSHOT_BUILDER_REQUEST.toString(), req);
+  }
+
+  private CreateResourceRequestV2 createSnapshotBuilderRequestResourceRequest(
+      AuthenticatedUserRequest userReq,
+      UUID snapshotId,
+      UUID snapshotBuilderRequestId,
+      Map<IamRole, List<String>> initialRoles) {
+    getUserInfoAndVerify(userReq);
+    FullyQualifiedResourceId parentId =
+        new FullyQualifiedResourceId()
+            .resourceTypeName(IamResourceType.DATASNAPSHOT.toString())
+            .resourceId(snapshotId.toString());
+    CreateResourceRequestV2 req =
+        new CreateResourceRequestV2()
+            .resourceId(snapshotBuilderRequestId.toString())
+            .parent(parentId)
+            .authDomain(List.of())
+            .policies(
+                initialRoles.entrySet().stream()
+                    .collect(
+                        Collectors.toMap(
+                            entry -> entry.getKey().toString(),
+                            entry -> createAccessPolicy(entry.getKey(), entry.getValue()))));
+
+    logger.debug(String.format("SAM request: %s", req));
+    return req;
   }
 
   private String syncOnePolicy(
       AuthenticatedUserRequest userReq, IamResourceType resourceType, UUID id, IamRole role)
       throws ApiException {
-    Map<String, List<Object>> results =
-        samGoogleApi(userReq.getToken())
-            .syncPolicy(resourceType.toString(), id.toString(), role.toString());
+    Map<String, List<SyncReportEntry>> results =
+        samApiService
+            .googleApi(userReq.getToken())
+            .syncPolicy(resourceType.toString(), id.toString(), role.toString(), null);
     String policyEmail = getPolicyGroupEmailFromResponse(results);
     logger.debug(
         "Policy Group Resource: {} Role: {} Email:  {} ",
@@ -339,23 +408,68 @@ public class SamIam implements IamProviderInterface {
     CreateResourceRequestV2 req = new CreateResourceRequestV2();
     req.setResourceId(profileId);
     req.putPoliciesItem(
-        IamRole.ADMIN.toString(),
-        createAccessPolicyOneV2(IamRole.ADMIN, samConfig.getAdminsGroupEmail()));
+        IamRole.ADMIN.toString(), createAccessPolicy(IamRole.ADMIN, getAdminEmailList()));
     req.putPoliciesItem(
         IamRole.OWNER.toString(),
-        createAccessPolicyOneV2(IamRole.OWNER, userStatusInfo.getUserEmail()));
-    req.putPoliciesItem(IamRole.USER.toString(), createAccessPolicyV2(IamRole.USER, null));
+        createAccessPolicyOne(IamRole.OWNER, userStatusInfo.getUserEmail()));
+    req.putPoliciesItem(IamRole.USER.toString(), createAccessPolicy(IamRole.USER, null));
+    req.authDomain(List.of());
 
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     logger.debug("SAM request: " + req);
 
     samResourceApi.createResourceV2(IamResourceType.SPEND_PROFILE.toString(), req);
+  }
+
+  private List<String> getAdminEmailList() {
+    return StringUtils.isBlank(samConfig.adminsGroupEmail())
+        ? List.of()
+        : List.of(samConfig.adminsGroupEmail());
   }
 
   @Override
   public void deleteProfileResource(AuthenticatedUserRequest userReq, String profileId)
       throws InterruptedException {
     deleteResource(userReq, IamResourceType.SPEND_PROFILE, profileId.toString());
+  }
+
+  @Override
+  public List<String> retrieveAuthDomains(
+      AuthenticatedUserRequest userReq, IamResourceType iamResourceType, UUID resourceId)
+      throws InterruptedException {
+    return SamRetry.retry(
+        configurationService, () -> retrieveAuthDomainInner(userReq, iamResourceType, resourceId));
+  }
+
+  public List<String> retrieveAuthDomainInner(
+      AuthenticatedUserRequest userReq, IamResourceType iamResourceType, UUID resourceId)
+      throws ApiException {
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
+    return samResourceApi.getAuthDomainV2(
+        iamResourceType.getSamResourceName(), resourceId.toString());
+  }
+
+  @Override
+  public void patchAuthDomain(
+      AuthenticatedUserRequest userReq,
+      IamResourceType iamResourceType,
+      UUID resourceId,
+      List<String> userGroups)
+      throws InterruptedException {
+    SamRetry.retry(
+        configurationService,
+        () -> patchAuthDomainInner(userReq, iamResourceType, resourceId, userGroups));
+  }
+
+  public void patchAuthDomainInner(
+      AuthenticatedUserRequest userReq,
+      IamResourceType iamResourceType,
+      UUID resourceId,
+      List<String> userGroups)
+      throws ApiException {
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
+    samResourceApi.patchAuthDomainV2(
+        iamResourceType.getSamResourceName(), resourceId.toString(), userGroups);
   }
 
   @Override
@@ -377,7 +491,7 @@ public class SamIam implements IamProviderInterface {
   private List<String> retrieveUserRolesInner(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType, UUID resourceId)
       throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     return samResourceApi.resourceRolesV2(
         iamResourceType.getSamResourceName(), resourceId.toString());
   }
@@ -385,7 +499,7 @@ public class SamIam implements IamProviderInterface {
   private List<SamPolicyModel> retrievePoliciesInner(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType, UUID resourceId)
       throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     try (Stream<AccessPolicyResponseEntryV2> resultStream =
         samResourceApi
             .listResourcePoliciesV2(iamResourceType.toString(), resourceId.toString())
@@ -397,7 +511,9 @@ public class SamIam implements IamProviderInterface {
                       .name(entry.getPolicyName())
                       .members(entry.getPolicy().getMemberEmails())
                       .memberPolicies(
-                          entry.getPolicy().getMemberPolicies().stream()
+                          Optional.ofNullable(entry.getPolicy().getMemberPolicies())
+                              .orElseGet(List::of)
+                              .stream()
                               .map(
                                   pid ->
                                       new ResourcePolicyModel()
@@ -422,7 +538,7 @@ public class SamIam implements IamProviderInterface {
   private Map<IamRole, String> retrievePolicyEmailsInner(
       AuthenticatedUserRequest userReq, IamResourceType iamResourceType, UUID resourceId)
       throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     try (Stream<AccessPolicyResponseEntryV2> resultStream =
         samResourceApi
             .listResourcePoliciesV2(iamResourceType.toString(), resourceId.toString())
@@ -456,7 +572,7 @@ public class SamIam implements IamProviderInterface {
       String policyName,
       String userEmail)
       throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     logger.debug(
         "addUserPolicy resourceType {} resourceId {} policyName {} userEmail {}",
         iamResourceType.toString(),
@@ -464,7 +580,7 @@ public class SamIam implements IamProviderInterface {
         policyName,
         userEmail);
     samResourceApi.addUserToPolicyV2(
-        iamResourceType.toString(), resourceId.toString(), policyName, userEmail);
+        iamResourceType.toString(), resourceId.toString(), policyName, userEmail, null);
   }
 
   @Override
@@ -490,7 +606,7 @@ public class SamIam implements IamProviderInterface {
       String policyName,
       String userEmail)
       throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     samResourceApi.removeUserFromPolicyV2(
         iamResourceType.toString(), resourceId.toString(), policyName, userEmail);
   }
@@ -501,7 +617,7 @@ public class SamIam implements IamProviderInterface {
       UUID resourceId,
       String policyName)
       throws ApiException {
-    ResourcesApi samResourceApi = samResourcesApi(userReq.getToken());
+    ResourcesApi samResourceApi = samApiService.resourcesApi(userReq.getToken());
     AccessPolicyMembershipV2 result =
         samResourceApi.getPolicyV2(iamResourceType.toString(), resourceId.toString(), policyName);
     return new PolicyModel().name(policyName).members(result.getMemberEmails());
@@ -509,7 +625,7 @@ public class SamIam implements IamProviderInterface {
 
   @Override
   public UserStatusInfo getUserInfo(AuthenticatedUserRequest userReq) {
-    UsersApi samUsersApi = samUsersApi(userReq.getToken());
+    UsersApi samUsersApi = samApiService.usersApi(userReq.getToken());
     try {
       org.broadinstitute.dsde.workbench.client.sam.model.UserStatusInfo samInfo =
           samUsersApi.getUserStatusInfo();
@@ -518,7 +634,7 @@ public class SamIam implements IamProviderInterface {
           .userEmail(samInfo.getUserEmail())
           .enabled(samInfo.getEnabled());
     } catch (ApiException ex) {
-      throw convertSAMExToDataRepoEx(ex);
+      throw convertSamExToDataRepoEx(ex);
     }
   }
 
@@ -528,7 +644,7 @@ public class SamIam implements IamProviderInterface {
   }
 
   private String getProxyGroupInner(AuthenticatedUserRequest userReq) throws ApiException {
-    return samGoogleApi(userReq.getToken()).getProxyGroup(userReq.getEmail());
+    return samApiService.googleApi(userReq.getToken()).getProxyGroup(userReq.getEmail());
   }
 
   @Override
@@ -537,7 +653,7 @@ public class SamIam implements IamProviderInterface {
       return SamRetry.retry(
           configurationService,
           () -> {
-            StatusApi samApi = samStatusApi();
+            StatusApi samApi = samApiService.statusApi();
             SystemStatus status = samApi.getSystemStatus();
             return new RepositoryStatusModelSystems()
                 .ok(status.getOk())
@@ -553,6 +669,131 @@ public class SamIam implements IamProviderInterface {
   }
 
   @Override
+  public void registerUser(String accessToken) throws InterruptedException {
+    logger.info("Registering the ingest service account into Terra");
+    SamRetry.retry(
+        configurationService,
+        () -> {
+          try {
+            logger.info("Running the registration process");
+            return samApiService.usersApi(accessToken).createUserV2(null);
+          } catch (ApiException e) {
+            // This conflict could happen if the request timed out originally.
+            // In that case, it's ok to assume that this is a success and move on
+            if (e.getCode() == 409) {
+              logger.warn("User already exists - skipping", e);
+              return null;
+            } else {
+              throw e;
+            }
+          }
+        });
+  }
+
+  @Override
+  public String createGroup(String accessToken, String groupName) throws InterruptedException {
+    SamRetry.retry(configurationService, () -> createGroupInner(accessToken, groupName));
+    return SamRetry.retry(configurationService, () -> getGroupEmail(accessToken, groupName));
+  }
+
+  private void createGroupInner(String accessToken, String groupName) throws ApiException {
+    samApiService.groupApi(accessToken).postGroup(groupName, null);
+  }
+
+  @Override
+  public String getGroup(String accessToken, String groupName) throws InterruptedException {
+    return SamRetry.retry(configurationService, () -> getGroupEmail(accessToken, groupName));
+  }
+
+  private String getGroupEmail(String accessToken, String groupName) throws ApiException {
+    return samApiService.groupApi(accessToken).getGroup(groupName);
+  }
+
+  @Override
+  public List<String> getGroupPolicyEmails(String accessToken, String groupName, String policyName)
+      throws InterruptedException {
+    return SamRetry.retry(
+        configurationService, () -> getGroupPolicyEmailsInner(accessToken, groupName, policyName));
+  }
+
+  private List<String> getGroupPolicyEmailsInner(
+      String accessToken, String groupName, String policyName) throws ApiException {
+    return samApiService.groupApi(accessToken).getGroupPolicyEmails(groupName, policyName);
+  }
+
+  @Override
+  public List<String> addGroupPolicyEmail(
+      String accessToken, String groupName, String policyName, String memberEmail)
+      throws InterruptedException {
+    SamRetry.retry(
+        configurationService,
+        () -> addGroupPolicyEmailInner(accessToken, groupName, policyName, memberEmail));
+    return getGroupPolicyEmails(accessToken, groupName, policyName);
+  }
+
+  private void addGroupPolicyEmailInner(
+      String accessToken, String groupName, String policyName, String memberEmail)
+      throws ApiException {
+    samApiService.groupApi(accessToken).addEmailToGroup(groupName, policyName, memberEmail, null);
+  }
+
+  @Override
+  public List<String> removeGroupPolicyEmail(
+      String accessToken, String groupName, String policyName, String memberEmail)
+      throws InterruptedException {
+    SamRetry.retry(
+        configurationService,
+        () -> removeGroupPolicyEmailInner(accessToken, groupName, policyName, memberEmail));
+    return getGroupPolicyEmails(accessToken, groupName, policyName);
+  }
+
+  private void removeGroupPolicyEmailInner(
+      String accessToken, String groupName, String policyName, String memberEmail)
+      throws ApiException {
+    samApiService.groupApi(accessToken).removeEmailFromGroup(groupName, policyName, memberEmail);
+  }
+
+  @Override
+  public void overwriteGroupPolicyEmailsIncludeRequestingUser(
+      String accessToken,
+      AuthenticatedUserRequest userReq,
+      String groupName,
+      String policyName,
+      List<String> emailAddresses)
+      throws InterruptedException {
+    List<String> emails = new ArrayList<>(emailAddresses);
+    UserStatusInfo userStatusInfo = getUserInfoAndVerify(userReq);
+    emails.add(userStatusInfo.getUserEmail());
+    overwriteGroupPolicyEmails(accessToken, groupName, policyName, emails);
+  }
+
+  @Override
+  public void overwriteGroupPolicyEmails(
+      String accessToken, String groupName, String policyName, List<String> emailAddresses)
+      throws InterruptedException {
+    SamRetry.retry(
+        configurationService,
+        () -> overwriteGroupPolicyEmailsInner(accessToken, groupName, policyName, emailAddresses));
+  }
+
+  private void overwriteGroupPolicyEmailsInner(
+      String accessToken, String groupName, String policyName, List<String> emailAddresses)
+      throws ApiException {
+    samApiService
+        .groupApi(accessToken)
+        .overwriteGroupPolicyEmails(groupName, policyName, emailAddresses);
+  }
+
+  @Override
+  public void deleteGroup(String accessToken, String groupName) throws InterruptedException {
+    SamRetry.retry(configurationService, () -> deleteGroupInner(accessToken, groupName));
+  }
+
+  private void deleteGroupInner(String accessToken, String groupName) throws ApiException {
+    samApiService.groupApi(accessToken).deleteGroup(groupName);
+  }
+
+  @Override
   public String getPetToken(AuthenticatedUserRequest userReq, List<String> scopes)
       throws InterruptedException {
     return SamRetry.retry(configurationService, () -> getPetTokenInner(userReq, scopes));
@@ -560,7 +801,66 @@ public class SamIam implements IamProviderInterface {
 
   private String getPetTokenInner(AuthenticatedUserRequest userReq, List<String> scopes)
       throws ApiException {
-    return samGoogleApi(userReq.getToken()).getArbitraryPetServiceAccountToken(scopes);
+    return samApiService.googleApi(userReq.getToken()).getArbitraryPetServiceAccountToken(scopes);
+  }
+
+  @Override
+  public String signUrlForBlob(
+      AuthenticatedUserRequest userReq, String project, String path, Duration duration)
+      throws InterruptedException {
+    return SamRetry.retry(
+        configurationService, () -> signUrlForBlobInner(userReq, project, path, duration));
+  }
+
+  private String signUrlForBlobInner(
+      AuthenticatedUserRequest userReq, String project, String path, Duration duration)
+      throws ApiException {
+    RequesterPaysSignedUrlRequest request =
+        new RequesterPaysSignedUrlRequest()
+            .gsPath(path)
+            .duration(BigDecimal.valueOf(duration.toMinutes()))
+            .requesterPaysProject(project);
+    return samApiService.googleApi(userReq.getToken()).getRequesterPaysSignedUrlForBlob(request);
+  }
+
+  @Override
+  public void azureCreateManagedResourceGroup(
+      AuthenticatedUserRequest userReq,
+      String billingProfileId,
+      ManagedResourceGroupCoordinates managedResourceGroupCoordinates)
+      throws InterruptedException {
+    SamRetry.retry(
+        configurationService,
+        () ->
+            azureCreateManagedResourceGroupInner(
+                userReq, billingProfileId, managedResourceGroupCoordinates));
+  }
+
+  private void azureCreateManagedResourceGroupInner(
+      AuthenticatedUserRequest userReq,
+      String billingProfileId,
+      ManagedResourceGroupCoordinates managedResourceGroupCoordinates)
+      throws ApiException {
+    samApiService
+        .azureApi(userReq.getToken())
+        .createManagedResourceGroup(billingProfileId, managedResourceGroupCoordinates);
+  }
+
+  @Override
+  public boolean getResourceTypeAdminPermission(
+      AuthenticatedUserRequest userReq, IamResourceType iamResourceType, IamAction action)
+      throws InterruptedException {
+    return SamRetry.retry(
+        configurationService,
+        () -> getResourceTypeAdminPermissionInner(userReq, iamResourceType, action));
+  }
+
+  private boolean getResourceTypeAdminPermissionInner(
+      AuthenticatedUserRequest userReq, IamResourceType iamResourceType, IamAction action)
+      throws ApiException {
+    return samApiService
+        .adminApi(userReq.getToken())
+        .resourceTypeAdminPermission(iamResourceType.getSamResourceName(), action.toString());
   }
 
   private UserStatusInfo getUserInfoAndVerify(AuthenticatedUserRequest userReq) {
@@ -572,17 +872,26 @@ public class SamIam implements IamProviderInterface {
     return userStatusInfo;
   }
 
-  AccessPolicyMembershipV2 createAccessPolicyOneV2(IamRole role, String email) {
-    return createAccessPolicyV2(role, Collections.singletonList(email));
+  AccessPolicyMembershipRequest createAccessPolicyOne(IamRole role, String email) {
+    return createAccessPolicy(role, List.of(email));
   }
 
-  AccessPolicyMembershipV2 createAccessPolicyV2(IamRole role, List<String> emails) {
-    AccessPolicyMembershipV2 membership =
-        new AccessPolicyMembershipV2().roles(Collections.singletonList(role.toString()));
+  AccessPolicyMembershipRequest createAccessPolicy(IamRole role, List<String> emails) {
+    AccessPolicyMembershipRequest membership =
+        new AccessPolicyMembershipRequest().roles(List.of(role.toString()));
     if (emails != null) {
       membership.memberEmails(emails);
     }
     return membership;
+  }
+
+  @Override
+  public UserIdInfo getUserIds(String accessToken, String userEmail) throws InterruptedException {
+    return SamRetry.retry(configurationService, () -> getUserIdsInner(accessToken, userEmail));
+  }
+
+  private UserIdInfo getUserIdsInner(String accessToken, String userEmail) throws ApiException {
+    return samApiService.usersApi(accessToken).getUserIds(userEmail);
   }
 
   /**
@@ -593,7 +902,8 @@ public class SamIam implements IamProviderInterface {
    * @param syncPolicyResponse map with one key that is an email
    * @return the policy group email
    */
-  private String getPolicyGroupEmailFromResponse(Map<String, List<Object>> syncPolicyResponse) {
+  private String getPolicyGroupEmailFromResponse(
+      Map<String, List<SyncReportEntry>> syncPolicyResponse) {
     if (syncPolicyResponse.size() != 1) {
       throw new IllegalArgumentException(
           "Expecting syncPolicyResponse to be an object with one key");
@@ -605,52 +915,30 @@ public class SamIam implements IamProviderInterface {
    * Converts a SAM-specific ApiException to a DataRepo-specific common exception, based on the HTTP
    * status code.
    */
-  public static ErrorReportException convertSAMExToDataRepoEx(final ApiException samEx) {
-    logger.warn("SAM client exception code: {}", samEx.getCode());
-    logger.warn("SAM client exception message: {}", samEx.getMessage());
-    logger.warn("SAM client exception details: {}", samEx.getResponseBody());
+  public static ErrorReportException convertSamExToDataRepoEx(final ApiException samEx) {
+    logger.warn("Sam client exception code: {}", samEx.getCode());
+    logger.warn("Sam client exception message: {}", samEx.getMessage());
+    logger.warn("Sam client exception details: {}", samEx.getResponseBody());
 
     // Sometimes the sam message is buried several levels down inside of the error report object.
-    // If we find an empty message then we try to deserialize the error report and use that message.
-    String message = samEx.getMessage();
-    if (StringUtils.isEmpty(message)) {
-      try {
-        ErrorReport errorReport =
-            objectMapper.readValue(samEx.getResponseBody(), ErrorReport.class);
-        message = extractErrorMessage(errorReport);
-      } catch (JsonProcessingException ex) {
-        logger.debug("Unable to deserialize sam exception response body");
-      }
+    String message;
+    try {
+      ErrorReport errorReport = objectMapper.readValue(samEx.getResponseBody(), ErrorReport.class);
+      message = extractErrorMessage(errorReport);
+    } catch (JsonProcessingException | IllegalArgumentException ex) {
+      message = Objects.requireNonNullElse(samEx.getMessage(), "Sam client exception");
     }
 
-    switch (samEx.getCode()) {
-      case HttpStatusCodes.STATUS_CODE_BAD_REQUEST:
-        {
-          return new IamBadRequestException(message, samEx);
-        }
-      case HttpStatusCodes.STATUS_CODE_UNAUTHORIZED:
-        {
-          return new IamUnauthorizedException(message, samEx);
-        }
-      case HttpStatusCodes.STATUS_CODE_FORBIDDEN:
-        {
-          return new IamForbiddenException(message, samEx);
-        }
-      case HttpStatusCodes.STATUS_CODE_NOT_FOUND:
-        {
-          return new IamNotFoundException(message, samEx);
-        }
-      case HttpStatusCodes.STATUS_CODE_CONFLICT:
-        {
-          return new IamConflictException(message, samEx);
-        }
+    return switch (samEx.getCode()) {
+      case HttpStatusCodes.STATUS_CODE_BAD_REQUEST -> new IamBadRequestException(message, samEx);
+      case HttpStatusCodes.STATUS_CODE_UNAUTHORIZED -> new IamUnauthorizedException(message, samEx);
+      case HttpStatusCodes.STATUS_CODE_FORBIDDEN -> new IamForbiddenException(message, samEx);
+      case HttpStatusCodes.STATUS_CODE_NOT_FOUND -> new IamNotFoundException(message, samEx);
+      case HttpStatusCodes.STATUS_CODE_CONFLICT -> new IamConflictException(message, samEx);
         // SAM does not use a 501 NOT_IMPLEMENTED status code, so that case is skipped here
         // A 401 error will only occur when OpenDJ is down and should be raised as a 500 error
-      default:
-        {
-          return new IamInternalServerErrorException(message, samEx);
-        }
-    }
+      default -> new IamInternalServerErrorException(message, samEx);
+    };
   }
 
   @VisibleForTesting
