@@ -1,15 +1,24 @@
 package bio.terra.service.tabulardata.google.bigquery;
 
+import static bio.terra.common.PdaoConstant.PDAO_COUNT_COLUMN_NAME;
+import static bio.terra.common.PdaoConstant.PDAO_LOAD_HISTORY_STAGING_TABLE_PREFIX;
+import static bio.terra.common.PdaoConstant.PDAO_LOAD_HISTORY_TABLE;
+import static bio.terra.common.PdaoConstant.PDAO_PREFIX;
 import static bio.terra.common.PdaoConstant.PDAO_ROW_ID_COLUMN;
 import static bio.terra.common.PdaoConstant.PDAO_TABLE_ID_COLUMN;
 import static bio.terra.service.tabulardata.google.bigquery.BigQueryPdao.prefixName;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.endsWithIgnoringCase;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.samePropertyValuesAs;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.times;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -23,6 +32,7 @@ import bio.terra.common.category.Unit;
 import bio.terra.common.exception.PdaoException;
 import bio.terra.common.fixtures.DatasetFixtures;
 import bio.terra.grammar.exception.InvalidQueryException;
+import bio.terra.model.ColumnStatisticsTextValue;
 import bio.terra.model.SnapshotRequestContentsModel;
 import bio.terra.model.SnapshotRequestRowIdModel;
 import bio.terra.model.SnapshotRequestRowIdTableModel;
@@ -34,6 +44,7 @@ import bio.terra.service.dataset.AssetTable;
 import bio.terra.service.dataset.Dataset;
 import bio.terra.service.dataset.DatasetTable;
 import bio.terra.service.dataset.GoogleStorageResource;
+import bio.terra.service.filedata.exception.TooManyDmlStatementsOutstandingException;
 import bio.terra.service.filedata.google.bq.BigQueryConfiguration;
 import bio.terra.service.resourcemanagement.google.GoogleProjectResource;
 import bio.terra.service.snapshot.RowIdMatch;
@@ -46,6 +57,7 @@ import bio.terra.service.snapshot.exception.MismatchedValueException;
 import bio.terra.service.tabulardata.google.BigQueryProject;
 import com.google.api.gax.paging.Page;
 import com.google.cloud.bigquery.BigQuery;
+import com.google.cloud.bigquery.BigQueryException;
 import com.google.cloud.bigquery.Field;
 import com.google.cloud.bigquery.FieldList;
 import com.google.cloud.bigquery.FieldValue;
@@ -61,24 +73,25 @@ import com.google.cloud.bigquery.TableInfo;
 import com.google.cloud.bigquery.TableResult;
 import com.google.cloud.bigquery.ViewDefinition;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
-import org.springframework.test.context.ActiveProfiles;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.HttpStatus;
+import org.stringtemplate.v4.ST;
 
-@ActiveProfiles({"google", "unittest"})
-@Category(Unit.class)
-@RunWith(MockitoJUnitRunner.class)
-public class BigQueryPdaoUnitTest {
+@Tag(Unit.TAG)
+@ExtendWith(MockitoExtension.class)
+class BigQueryPdaoUnitTest {
 
+  @Captor private ArgumentCaptor<String> stringCaptor;
   private static final UUID DATASET_ID = UUID.randomUUID();
   private static final UUID SNAPSHOT_ID = UUID.randomUUID();
   private static final UUID PROFILE_1_ID = UUID.randomUUID();
@@ -114,36 +127,82 @@ public class BigQueryPdaoUnitTest {
   private static final Instant CREATED_AT = Instant.parse("2022-01-01T00:00:00.00Z");
   private static final long CREATED_AT_MICROS = DateTimeUtils.toEpochMicros(CREATED_AT);
 
-  @Mock private ApplicationConfiguration applicationConfiguration;
-  @Mock private BigQueryConfiguration bigQueryConfiguration;
   @Mock private BigQueryProject bigQueryProjectSnapshot;
   @Mock private BigQuery bigQuerySnapshot;
   @Mock private BigQueryProject bigQueryProjectDataset;
-  @Mock private BigQuery bigQueryDataset;
 
   private Snapshot snapshot;
   private BigQueryDatasetPdao bigQueryDatasetPdao;
   private BigQuerySnapshotPdao bigQuerySnapshotPdao;
 
-  @Before
-  public void setUp() throws Exception {
+  @BeforeEach
+  void setUp() {
 
     when(bigQueryProjectSnapshot.getProjectId()).thenReturn(SNAPSHOT_PROJECT_ID);
-    when(bigQueryProjectSnapshot.getBigQuery()).thenReturn(bigQuerySnapshot);
     BigQueryProject.put(bigQueryProjectSnapshot);
 
     when(bigQueryProjectDataset.getProjectId()).thenReturn(DATASET_PROJECT_ID);
-    when(bigQueryProjectDataset.getBigQuery()).thenReturn(bigQueryDataset);
     BigQueryProject.put(bigQueryProjectDataset);
 
     bigQueryDatasetPdao = new BigQueryDatasetPdao();
     bigQuerySnapshotPdao =
-        new BigQuerySnapshotPdao(applicationConfiguration, bigQueryConfiguration);
+        new BigQuerySnapshotPdao(
+            mock(ApplicationConfiguration.class), mock(BigQueryConfiguration.class));
     snapshot = mockSnapshot();
   }
 
+  private void mockGetBigQuery() {
+    when(bigQueryProjectSnapshot.getBigQuery()).thenReturn(bigQuerySnapshot);
+  }
+
   @Test
-  public void testGetRefIds() throws InterruptedException {
+  void testMergeStagingHistoryError() {
+    Dataset dataset = mockDataset();
+    String flightId = "flightId";
+    ST sqlTemplate = new ST(BigQueryDatasetPdao.mergeLoadHistoryStagingTableTemplate);
+    sqlTemplate.add("project", bigQueryProjectDataset.getProjectId());
+    sqlTemplate.add("dataset", BigQueryPdao.prefixName(dataset.getName()));
+    sqlTemplate.add("stagingTable", PDAO_LOAD_HISTORY_STAGING_TABLE_PREFIX + flightId);
+    sqlTemplate.add("loadTable", PDAO_LOAD_HISTORY_TABLE);
+    String query = sqlTemplate.render();
+
+    Throwable cause =
+        new BigQueryException(
+            HttpStatus.BAD_REQUEST.value(), "Too many DML statements outstanding against table");
+    BQTestUtils.mockBQQueryError(
+        bigQueryProjectDataset, query, new PdaoException("Failure executing query", cause));
+    assertThrows(
+        TooManyDmlStatementsOutstandingException.class,
+        () -> bigQueryDatasetPdao.mergeStagingLoadHistoryTable(dataset, flightId));
+  }
+
+  @Test
+  void testAddRowIdsToStagingTableUnsetExisting() throws InterruptedException {
+    Dataset dataset = mockDataset();
+
+    bigQueryDatasetPdao.addRowIdsToStagingTable(dataset, TABLE_1_NAME, true);
+
+    verify(bigQueryProjectDataset).query(stringCaptor.capture());
+    String sql = stringCaptor.getValue().strip();
+    assertThat(sql, containsString("SET datarepo_row_id = GENERATE_UUID()"));
+    assertThat("All rows get a new row ID", sql, endsWithIgnoringCase("WHERE true"));
+  }
+
+  @Test
+  void testAddRowIdsToStagingTableKeepExisting() throws InterruptedException {
+    Dataset dataset = mockDataset();
+
+    bigQueryDatasetPdao.addRowIdsToStagingTable(dataset, TABLE_1_NAME, false);
+
+    verify(bigQueryProjectDataset).query(stringCaptor.capture());
+    String sql = stringCaptor.getValue().strip();
+    assertThat(sql, containsString("SET datarepo_row_id = GENERATE_UUID()"));
+    assertThat(
+        "Existing row IDs are kept", sql, endsWithIgnoringCase("WHERE datarepo_row_id IS NULL"));
+  }
+
+  @Test
+  void testGetRefIds() throws InterruptedException {
     String value1 = "value1";
     String value2 = "value2";
     BQTestUtils.mockBQQuery(
@@ -169,7 +228,7 @@ public class BigQueryPdaoUnitTest {
   }
 
   @Test
-  public void testGetSnapshotRefIds() throws InterruptedException {
+  void testGetSnapshotRefIds() throws InterruptedException {
     String value1 = "value1";
     String value2 = "value2";
 
@@ -209,7 +268,7 @@ public class BigQueryPdaoUnitTest {
   }
 
   @Test
-  public void testMapValuesToRows() throws InterruptedException {
+  void testMapValuesToRows() throws InterruptedException {
     String input1 = "input1";
     String input2 = "input2";
 
@@ -217,7 +276,7 @@ public class BigQueryPdaoUnitTest {
     String drRowId2 = UUID.randomUUID().toString();
     DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
 
-    BQTestUtils.mockBQQuery(
+    BQTestUtils.mockBQQueryWithArgs(
         bigQueryProjectDataset,
         "SELECT T.datarepo_row_id, V.input_value FROM ("
             + "SELECT input_value FROM UNNEST(['"
@@ -247,7 +306,7 @@ public class BigQueryPdaoUnitTest {
   }
 
   @Test
-  public void testMapValuesToRowsWithMismatch() throws InterruptedException {
+  void testMapValuesToRowsWithMismatch() throws InterruptedException {
     String ipt1 = "input1";
     String ipt2 = "input2";
     String ipt3 = "input3";
@@ -256,7 +315,7 @@ public class BigQueryPdaoUnitTest {
     String drRowId2 = UUID.randomUUID().toString();
     DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
 
-    BQTestUtils.mockBQQuery(
+    BQTestUtils.mockBQQueryWithArgs(
         bigQueryProjectDataset,
         "SELECT T.datarepo_row_id, V.input_value FROM ("
             + "SELECT input_value FROM UNNEST(['"
@@ -290,16 +349,17 @@ public class BigQueryPdaoUnitTest {
   }
 
   @Test
-  public void testCreateSnapshotEmptyRowIds() throws InterruptedException {
+  void testCreateSnapshotEmptyRowIds() throws InterruptedException {
+    mockGetBigQuery();
     mockNumRowIds(snapshot, TABLE_1_NAME, 0);
 
-    bigQuerySnapshotPdao.createSnapshot(snapshot, Collections.emptyList(), CREATED_AT);
+    bigQuerySnapshotPdao.createSnapshot(snapshot, List.of(), CREATED_AT);
 
-    verify(bigQueryProjectSnapshot, times(1))
+    verify(bigQueryProjectSnapshot)
         .createDataset(SNAPSHOT_NAME, SNAPSHOT_DESCRIPTION, GoogleRegion.NORTHAMERICA_NORTHEAST1);
 
     // Note: explicitly building up sql to make it easier to verify
-    verify(bigQuerySnapshot, times(1))
+    verify(bigQuerySnapshot)
         .create(
             TableInfo.of(
                 TableId.of(SNAPSHOT_NAME, TABLE_1_NAME),
@@ -331,7 +391,7 @@ public class BigQueryPdaoUnitTest {
                         + TABLE_1_ID
                         + "')")));
 
-    verify(bigQuerySnapshot, times(1))
+    verify(bigQuerySnapshot)
         .create(
             TableInfo.of(
                 TableId.of(SNAPSHOT_NAME, TABLE_2_NAME),
@@ -374,19 +434,21 @@ public class BigQueryPdaoUnitTest {
   }
 
   @Test
-  public void testCreateSnapshotMismatchedRowIdCounts() throws InterruptedException {
+  void testCreateSnapshotMismatchedRowIdCounts() throws InterruptedException {
+    mockGetBigQuery();
     mockNumRowIds(snapshot, TABLE_1_NAME, 0);
+    doReturn(null).when(bigQueryProjectSnapshot).query(anyString());
 
+    List<String> rowIds = List.of(UUID.randomUUID().toString());
     assertThrows(
         PdaoException.class,
-        () ->
-            bigQuerySnapshotPdao.createSnapshot(
-                snapshot, List.of(UUID.randomUUID().toString()), CREATED_AT),
+        () -> bigQuerySnapshotPdao.createSnapshot(snapshot, rowIds, CREATED_AT),
         "Invalid row ids supplied");
   }
 
   @Test
-  public void testCreateSnapshotWithRowIds() throws InterruptedException {
+  void testCreateSnapshotWithRowIds() throws InterruptedException {
+    mockGetBigQuery();
     String drRowId1 = UUID.randomUUID().toString();
     String drRowId2 = UUID.randomUUID().toString();
     DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
@@ -401,13 +463,9 @@ public class BigQueryPdaoUnitTest {
             .toString();
     mockNumRowIds(snapshot, TABLE_1_NAME, 2);
 
-    bigQuerySnapshotPdao.createSnapshot(snapshot, List.of(drRowId1, drRowId2), CREATED_AT);
-
-    verify(bigQueryProjectSnapshot, times(1))
-        .createDataset(SNAPSHOT_NAME, SNAPSHOT_DESCRIPTION, GoogleRegion.NORTHAMERICA_NORTHEAST1);
-
     // Verify that the rowIds are properly copied
-    verify(bigQueryProjectSnapshot, times(1))
+    doReturn(null)
+        .when(bigQueryProjectSnapshot)
         .query(
             "INSERT INTO `"
                 + SNAPSHOT_PROJECT_ID
@@ -425,22 +483,27 @@ public class BigQueryPdaoUnitTest {
                 + "']) AS row_id"
                 + ") AS T");
 
+    bigQuerySnapshotPdao.createSnapshot(snapshot, List.of(drRowId1, drRowId2), CREATED_AT);
+
+    verify(bigQueryProjectSnapshot)
+        .createDataset(SNAPSHOT_NAME, SNAPSHOT_DESCRIPTION, GoogleRegion.NORTHAMERICA_NORTHEAST1);
+
     // Verify the result of the relationship walk are written to the rowid table
-    verify(bigQuerySnapshot, times(1))
+    verify(bigQuerySnapshot)
         .query(
             QueryJobConfiguration.newBuilder(
                     "WITH merged_table AS (SELECT DISTINCT '"
                         + TABLE_2_ID
                         + "' AS datarepo_table_id, "
                         + "T.datarepo_row_id "
-                        + "FROM ("
+                        + "FROM (("
                         + BigQueryDatasetPdao.renderDatasetLiveViewSql(
                             DATASET_PROJECT_ID, prefixName(DATASET_NAME), table2, null, CREATED_AT)
-                        + ") T, "
-                        + "("
+                        + ")) T, "
+                        + "(("
                         + BigQueryDatasetPdao.renderDatasetLiveViewSql(
                             DATASET_PROJECT_ID, prefixName(DATASET_NAME), table1, null, CREATED_AT)
-                        + ") F, "
+                        + ")) F, "
                         + "`"
                         + SNAPSHOT_PROJECT_ID
                         + "."
@@ -449,11 +512,11 @@ public class BigQueryPdaoUnitTest {
                         + "WHERE R.datarepo_table_id = '"
                         + TABLE_1_ID
                         + "' AND "
-                        + "R.datarepo_row_id = F.datarepo_row_id AND T."
-                        + TABLE_2_COL1_NAME
-                        + " = "
-                        + "F."
+                        + "R.datarepo_row_id = F.datarepo_row_id AND F."
                         + TABLE_1_COL1_NAME
+                        + " = "
+                        + "T."
+                        + TABLE_2_COL1_NAME
                         + ") "
                         + "SELECT datarepo_table_id,datarepo_row_id FROM merged_table WHERE "
                         + "datarepo_row_id NOT IN (SELECT datarepo_row_id "
@@ -470,7 +533,7 @@ public class BigQueryPdaoUnitTest {
                         QueryParameterValue.timestamp(CREATED_AT_MICROS)))
                 .build());
 
-    verify(bigQuerySnapshot, times(1))
+    verify(bigQuerySnapshot)
         .create(
             TableInfo.of(
                 TableId.of(SNAPSHOT_NAME, TABLE_1_NAME),
@@ -502,7 +565,7 @@ public class BigQueryPdaoUnitTest {
                         + TABLE_1_ID
                         + "')")));
 
-    verify(bigQuerySnapshot, times(1))
+    verify(bigQuerySnapshot)
         .create(
             TableInfo.of(
                 TableId.of(SNAPSHOT_NAME, TABLE_2_NAME),
@@ -545,7 +608,8 @@ public class BigQueryPdaoUnitTest {
   }
 
   @Test
-  public void testCreateSnapshotWithLiveViews() throws InterruptedException {
+  void testCreateSnapshotWithLiveViews() throws InterruptedException {
+    mockGetBigQuery();
     DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
     DatasetTable table2 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(1);
 
@@ -561,72 +625,68 @@ public class BigQueryPdaoUnitTest {
         Schema.of(Field.of("cnt", LegacySQLTypeName.NUMERIC)),
         List.of(Map.of("cnt", UUID.randomUUID().toString())));
 
+    // Verify call by mocking; unused stubs are an error.
+    doReturn(mock(TableResult.class))
+        .when(bigQueryProjectSnapshot)
+        .query(
+            "INSERT INTO `"
+                + SNAPSHOT_PROJECT_ID
+                + "."
+                + SNAPSHOT_NAME
+                + ".datarepo_row_ids` "
+                + "(datarepo_table_id, datarepo_row_id) "
+                + "(SELECT '"
+                + TABLE_1_ID
+                + "', datarepo_row_id "
+                + "FROM ("
+                + BigQueryDatasetPdao.renderDatasetLiveViewSql(
+                    DATASET_PROJECT_ID, prefixName(DATASET_NAME), table1, null, CREATED_AT)
+                + ") AS L) "
+                + "UNION ALL "
+                + "(SELECT '"
+                + TABLE_2_ID
+                + "', datarepo_row_id "
+                + "FROM ("
+                + BigQueryDatasetPdao.renderDatasetLiveViewSql(
+                    DATASET_PROJECT_ID, prefixName(DATASET_NAME), table2, null, CREATED_AT)
+                + ") AS L)",
+            Map.of("transactionTerminatedAt", QueryParameterValue.timestamp(CREATED_AT_MICROS)));
+
     bigQuerySnapshotPdao.createSnapshotWithLiveViews(
         snapshot, snapshot.getSourceDataset(), CREATED_AT);
 
     // Make sure that rowId table is created
-    verify(bigQueryProjectSnapshot, times(1))
+    verify(bigQueryProjectSnapshot)
         .createTable(
             snapshot.getName(),
             "datarepo_row_ids",
             Schema.of(
                 Field.of(PDAO_TABLE_ID_COLUMN, LegacySQLTypeName.STRING),
                 Field.of(PDAO_ROW_ID_COLUMN, LegacySQLTypeName.STRING)));
-
-    // Make sure that rowIds are inserted
-    verify(bigQueryProjectSnapshot, times(1))
-        .query(
-            eq(
-                "INSERT INTO `"
-                    + SNAPSHOT_PROJECT_ID
-                    + "."
-                    + SNAPSHOT_NAME
-                    + ".datarepo_row_ids` "
-                    + "(datarepo_table_id, datarepo_row_id) "
-                    + "(SELECT '"
-                    + TABLE_1_ID
-                    + "', datarepo_row_id "
-                    + "FROM ("
-                    + BigQueryDatasetPdao.renderDatasetLiveViewSql(
-                        DATASET_PROJECT_ID, prefixName(DATASET_NAME), table1, null, CREATED_AT)
-                    + ") AS L) "
-                    + "UNION ALL "
-                    + "(SELECT '"
-                    + TABLE_2_ID
-                    + "', datarepo_row_id "
-                    + "FROM ("
-                    + BigQueryDatasetPdao.renderDatasetLiveViewSql(
-                        DATASET_PROJECT_ID, prefixName(DATASET_NAME), table2, null, CREATED_AT)
-                    + ") AS L)"),
-            eq(
-                Map.of(
-                    "transactionTerminatedAt", QueryParameterValue.timestamp(CREATED_AT_MICROS))));
   }
 
   @Test
-  public void testCreateSnapshotWithLiveViewsValidationFails() throws InterruptedException {
+  void testCreateSnapshotWithLiveViewsValidationFails() throws InterruptedException {
     // Make validation return that no records will be in snapshot
     BQTestUtils.mockBQQuery(
         bigQueryProjectSnapshot,
-        "SELECT datarepo_row_id FROM `"
-            + SNAPSHOT_PROJECT_ID
-            + "."
-            + SNAPSHOT_NAME
-            + ".datarepo_row_ids` "
-            + "LIMIT 1",
+        "SELECT datarepo_row_id FROM `%s.%s.datarepo_row_ids` LIMIT 1"
+            .formatted(SNAPSHOT_PROJECT_ID, SNAPSHOT_NAME),
         Schema.of(Field.of("cnt", LegacySQLTypeName.NUMERIC)),
-        Collections.emptyList());
+        List.of());
 
+    doReturn(mock(TableResult.class)).when(bigQueryProjectSnapshot).query(anyString(), any());
+
+    Dataset sourceDataset = snapshot.getSourceDataset();
     assertThrows(
         PdaoException.class,
-        () ->
-            bigQuerySnapshotPdao.createSnapshotWithLiveViews(
-                snapshot, snapshot.getSourceDataset(), CREATED_AT),
+        () -> bigQuerySnapshotPdao.createSnapshotWithLiveViews(snapshot, sourceDataset, CREATED_AT),
         "This snapshot is empty");
   }
 
   @Test
-  public void testQueryForRowIds() throws InterruptedException {
+  void testQueryForRowIds() throws InterruptedException {
+    mockGetBigQuery();
     DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
 
     String query =
@@ -657,7 +717,7 @@ public class BigQueryPdaoUnitTest {
         List.of(Map.of("datarepo_row_id", drRowId1), Map.of("datarepo_row_id", drRowId2)));
 
     // Mock validation query
-    BQTestUtils.mockBQQuery(
+    BQTestUtils.mockBQQueryWithArgs(
         bigQueryProjectSnapshot,
         "SELECT COUNT(*) FROM `"
             + SNAPSHOT_PROJECT_ID
@@ -676,9 +736,9 @@ public class BigQueryPdaoUnitTest {
     AssetSpecification assetSpecification =
         snapshot.getFirstSnapshotSource().getAssetSpecification();
     AssetTable rootTable = assetSpecification.getRootTable();
-    bigQuerySnapshotPdao.queryForRowIds(assetSpecification, snapshot, query, CREATED_AT);
+    bigQuerySnapshotPdao.createSnapshotByQuery(assetSpecification, snapshot, query, CREATED_AT);
 
-    verify(bigQueryProjectSnapshot, times(1))
+    verify(bigQueryProjectSnapshot)
         .query(
             "INSERT INTO `"
                 + SNAPSHOT_PROJECT_ID
@@ -698,7 +758,8 @@ public class BigQueryPdaoUnitTest {
   }
 
   @Test
-  public void testQueryForRowIdsQueryIsEmpty() throws InterruptedException {
+  void testQueryForRowIdsQueryIsEmpty() {
+    mockGetBigQuery();
     DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
 
     String query =
@@ -726,20 +787,20 @@ public class BigQueryPdaoUnitTest {
         bigQuerySnapshot,
         queryConfig,
         Schema.of(Field.of("datarepo_row_id", LegacySQLTypeName.STRING)),
-        Collections.emptyList());
+        List.of());
+    AssetSpecification assetSpecification =
+        snapshot.getFirstSnapshotSource().getAssetSpecification();
     assertThrows(
         InvalidQueryException.class,
         () ->
-            bigQuerySnapshotPdao.queryForRowIds(
-                snapshot.getFirstSnapshotSource().getAssetSpecification(),
-                snapshot,
-                query,
-                CREATED_AT),
+            bigQuerySnapshotPdao.createSnapshotByQuery(
+                assetSpecification, snapshot, query, CREATED_AT),
         "Query returned 0 results");
   }
 
   @Test
-  public void testQueryForRowIdsValidationFails() throws InterruptedException {
+  void testQueryForRowIdsValidationFails() {
+    mockGetBigQuery();
     DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
 
     String query =
@@ -770,7 +831,7 @@ public class BigQueryPdaoUnitTest {
         List.of(Map.of("datarepo_row_id", drRowId1), Map.of("datarepo_row_id", drRowId2)));
 
     // Mock validation query
-    BQTestUtils.mockBQQuery(
+    BQTestUtils.mockBQQueryWithArgs(
         bigQueryProjectSnapshot,
         "SELECT COUNT(*) FROM `"
             + SNAPSHOT_PROJECT_ID
@@ -786,24 +847,23 @@ public class BigQueryPdaoUnitTest {
         Schema.of(Field.of("cnt", LegacySQLTypeName.STRING)),
         List.of(Map.of("cnt", "1")));
 
+    AssetSpecification assetSpecification =
+        snapshot.getFirstSnapshotSource().getAssetSpecification();
     assertThrows(
         MismatchedValueException.class,
         () ->
-            bigQuerySnapshotPdao.queryForRowIds(
-                snapshot.getFirstSnapshotSource().getAssetSpecification(),
-                snapshot,
-                query,
-                CREATED_AT),
+            bigQuerySnapshotPdao.createSnapshotByQuery(
+                assetSpecification, snapshot, query, CREATED_AT),
         "Query results did not match dataset root row ids");
   }
 
   @Test
-  public void testMatchRowIds() throws InterruptedException {
+  void testMatchRowIds() throws InterruptedException {
     String drRowId1 = UUID.randomUUID().toString();
     String drRowId2 = UUID.randomUUID().toString();
     DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
 
-    BQTestUtils.mockBQQuery(
+    BQTestUtils.mockBQQueryWithArgs(
         bigQueryProjectDataset,
         "SELECT T.datarepo_row_id, V.input_value FROM ("
             + "SELECT input_value FROM UNNEST(['"
@@ -834,12 +894,12 @@ public class BigQueryPdaoUnitTest {
   }
 
   @Test
-  public void testMatchRowIdsWithMismatch() throws InterruptedException {
+  void testMatchRowIdsWithMismatch() throws InterruptedException {
     String drRowId1 = UUID.randomUUID().toString();
     String drRowId2 = UUID.randomUUID().toString();
     String drRowId3 = UUID.randomUUID().toString();
     DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
-    BQTestUtils.mockBQQuery(
+    BQTestUtils.mockBQQueryWithArgs(
         bigQueryProjectDataset,
         "SELECT T.datarepo_row_id, V.input_value FROM ("
             + "SELECT input_value FROM UNNEST(['"
@@ -878,48 +938,16 @@ public class BigQueryPdaoUnitTest {
   }
 
   @Test
-  public void testCreateSnapshotWithProvidedIds() throws InterruptedException {
+  void testCreateSnapshotWithProvidedIds() throws InterruptedException {
+    mockGetBigQuery();
     String drRowId1 = UUID.randomUUID().toString();
     String drRowId2 = UUID.randomUUID().toString();
-    DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
-
-    BQTestUtils.mockBQQuery(
-        bigQueryProjectDataset,
-        "SELECT T.datarepo_row_id, V.input_value FROM ("
-            + "SELECT input_value FROM UNNEST(['"
-            + drRowId1
-            + "','"
-            + drRowId2
-            + "']) AS input_value) AS V "
-            + "LEFT JOIN ("
-            + BigQueryDatasetPdao.renderDatasetLiveViewSql(
-                DATASET_PROJECT_ID, prefixName(DATASET_NAME), table1, null, CREATED_AT)
-            + ") AS T "
-            + "ON V.input_value = CAST(T.datarepo_row_id AS STRING)",
-        Schema.of(
-            Field.of("datarepo_row_id", LegacySQLTypeName.STRING),
-            Field.of("input_value", LegacySQLTypeName.STRING)),
-        List.of(
-            Map.of("datarepo_row_id", drRowId1, "input_value", drRowId1),
-            Map.of("datarepo_row_id", drRowId2, "input_value", drRowId2)));
 
     mockNumRowIds(snapshot, TABLE_2_NAME, 2);
 
-    SnapshotRequestContentsModel requestModel =
-        new SnapshotRequestContentsModel()
-            .rowIdSpec(
-                new SnapshotRequestRowIdModel()
-                    .addTablesItem(
-                        new SnapshotRequestRowIdTableModel()
-                            .addRowIdsItem(UUID.fromString(drRowId1))
-                            .addRowIdsItem(UUID.fromString(drRowId2))
-                            .addColumnsItem(TABLE_2_COL1_NAME)
-                            .addColumnsItem(TABLE_2_COL2_NAME)
-                            .tableName(TABLE_2_NAME)));
-    bigQuerySnapshotPdao.createSnapshotWithProvidedIds(snapshot, requestModel, CREATED_AT);
-
     // Verify that the rowIds are properly copied
-    verify(bigQueryProjectSnapshot, times(1))
+    doReturn(null)
+        .when(bigQueryProjectSnapshot)
         .query(
             "INSERT INTO `"
                 + SNAPSHOT_PROJECT_ID
@@ -936,35 +964,47 @@ public class BigQueryPdaoUnitTest {
                 + drRowId2
                 + "']) AS row_id"
                 + ") AS T");
+
+    SnapshotRequestContentsModel requestModel =
+        new SnapshotRequestContentsModel()
+            .rowIdSpec(
+                new SnapshotRequestRowIdModel()
+                    .addTablesItem(
+                        new SnapshotRequestRowIdTableModel()
+                            .addRowIdsItem(UUID.fromString(drRowId1))
+                            .addRowIdsItem(UUID.fromString(drRowId2))
+                            .addColumnsItem(TABLE_2_COL1_NAME)
+                            .addColumnsItem(TABLE_2_COL2_NAME)
+                            .tableName(TABLE_2_NAME)));
+    bigQuerySnapshotPdao.createSnapshotWithProvidedIds(snapshot, requestModel, CREATED_AT);
   }
 
   @Test
-  public void testCreateSnapshotWithProvidedIdsWithInvalidRowIds() throws InterruptedException {
+  void testCreateSnapshotWithProvidedIdsWithInvalidRowIds() throws InterruptedException {
     String drRowId1 = UUID.randomUUID().toString();
     String drRowId2 = UUID.randomUUID().toString();
-    DatasetTable table1 = snapshot.getFirstSnapshotSource().getDataset().getTables().get(0);
-
-    BQTestUtils.mockBQQuery(
-        bigQueryProjectDataset,
-        "SELECT T.datarepo_row_id, V.input_value FROM ("
-            + "SELECT input_value FROM UNNEST(['"
-            + drRowId1
-            + "','"
-            + drRowId2
-            + "']) AS input_value) AS V "
-            + "LEFT JOIN ("
-            + BigQueryDatasetPdao.renderDatasetLiveViewSql(
-                DATASET_PROJECT_ID, prefixName(DATASET_NAME), table1, null, CREATED_AT)
-            + ") AS T "
-            + "ON V.input_value = CAST(T.datarepo_row_id AS STRING)",
-        Schema.of(
-            Field.of("datarepo_row_id", LegacySQLTypeName.STRING),
-            Field.of("input_value", LegacySQLTypeName.STRING)),
-        List.of(
-            Map.of("datarepo_row_id", drRowId1, "input_value", drRowId1),
-            Map.of("datarepo_row_id", drRowId2, "input_value", drRowId2)));
 
     mockNumRowIds(snapshot, TABLE_2_NAME, 0);
+
+    // Verify that the rowIds are properly copied (make sure that it still actually happens)
+    doReturn(null)
+        .when(bigQueryProjectSnapshot)
+        .query(
+            "INSERT INTO `"
+                + SNAPSHOT_PROJECT_ID
+                + "."
+                + SNAPSHOT_NAME
+                + ".datarepo_row_ids` "
+                + "(datarepo_table_id,datarepo_row_id) "
+                + "SELECT '"
+                + TABLE_2_ID
+                + "' AS datarepo_table_id, T.row_id AS datarepo_row_id FROM ("
+                + "SELECT row_id FROM UNNEST(['"
+                + drRowId1
+                + "','"
+                + drRowId2
+                + "']) AS row_id"
+                + ") AS T");
 
     SnapshotRequestContentsModel requestModel =
         new SnapshotRequestContentsModel()
@@ -982,29 +1022,10 @@ public class BigQueryPdaoUnitTest {
         () ->
             bigQuerySnapshotPdao.createSnapshotWithProvidedIds(snapshot, requestModel, CREATED_AT),
         "Invalid row ids supplied");
-
-    // Verify that the rowIds are properly copied (make sure that it still actually happens)
-    verify(bigQueryProjectSnapshot, times(1))
-        .query(
-            "INSERT INTO `"
-                + SNAPSHOT_PROJECT_ID
-                + "."
-                + SNAPSHOT_NAME
-                + ".datarepo_row_ids` "
-                + "(datarepo_table_id,datarepo_row_id) "
-                + "SELECT '"
-                + TABLE_2_ID
-                + "' AS datarepo_table_id, T.row_id AS datarepo_row_id FROM ("
-                + "SELECT row_id FROM UNNEST(['"
-                + drRowId1
-                + "','"
-                + drRowId2
-                + "']) AS row_id"
-                + ") AS T");
   }
 
   @Test
-  public void aggregateSnapshotTableTest() {
+  void aggregateSnapshotTableTest() {
     String stringTest = "hello";
     int intTest = 1234567;
     List<String> listTest = List.of("a", "b", "c");
@@ -1019,7 +1040,7 @@ public class BigQueryPdaoUnitTest {
                         FieldValue.Attribute.REPEATED,
                         listTest.stream()
                             .map(s -> FieldValue.of(FieldValue.Attribute.PRIMITIVE, s))
-                            .collect(Collectors.toList())))));
+                            .toList()))));
 
     List<StandardSQLTypeName> standardSQLTypeNames =
         List.of(StandardSQLTypeName.STRING, StandardSQLTypeName.INT64, StandardSQLTypeName.ARRAY);
@@ -1036,20 +1057,96 @@ public class BigQueryPdaoUnitTest {
                           }
                           return fieldBuilder.build();
                         })
-                    .collect(Collectors.toList())));
+                    .toList()));
 
     Page<FieldValueList> page = mockPage(listOfFieldValueList);
 
-    TableResult table = new TableResult(schema, 10, page);
+    TableResult table =
+        TableResult.newBuilder().setSchema(schema).setTotalRows(10L).setPageNoSchema(page).build();
 
-    List<Map<String, Object>> result = BigQuerySnapshotPdao.aggregateSnapshotTable(table);
+    List<BigQueryDataResultModel> result = BigQueryPdao.aggregateTableData(table);
 
-    assertEquals(stringTest, result.get(0).get("STRING"));
-    assertEquals(intTest, result.get(0).get("INT64"));
-    assertEquals(listTest, result.get(0).get("ARRAY"));
+    assertEquals(stringTest, result.get(0).getRowResult().get("STRING"));
+    assertEquals(intTest, result.get(0).getRowResult().get("INT64"));
+    assertEquals(listTest, result.get(0).getRowResult().get("ARRAY"));
   }
 
-  private Snapshot mockSnapshot() {
+  @Test
+  void testAggregateTextColumnStats() {
+    String columnName = "Column1";
+    Schema schema =
+        Schema.of(
+            FieldList.of(
+                List.of(
+                    Field.newBuilder(columnName, StandardSQLTypeName.STRING).build(),
+                    Field.newBuilder(PDAO_COUNT_COLUMN_NAME, StandardSQLTypeName.INT64).build())));
+
+    Page<FieldValueList> page =
+        mockPage(
+            List.of(
+                FieldValueList.of(
+                    List.of(
+                        FieldValue.of(FieldValue.Attribute.PRIMITIVE, "Column1Value"),
+                        FieldValue.of(
+                            FieldValue.Attribute.PRIMITIVE,
+                            "2"))))); // For some reason, it wants the numeric value passed in as a
+    // string
+
+    TableResult table =
+        TableResult.newBuilder().setSchema(schema).setTotalRows(10L).setPageNoSchema(page).build();
+
+    List<ColumnStatisticsTextValue> result =
+        BigQueryPdao.aggregateTextColumnStats(table, columnName);
+
+    assertThat("ColumnStatisticsTextValue should be returned", result, hasSize(1));
+    assertThat(
+        "ColumnStatisticsTextValue should have the correct value",
+        result.get(0).getValue(),
+        equalTo("Column1Value"));
+    assertThat(
+        "ColumnStatisticsTextValue should have the correct count",
+        result.get(0).getCount(),
+        equalTo(2));
+  }
+
+  @Test
+  void testBQDatasetFullyQualifiedTableName() {
+    Dataset dataset = mockDataset();
+    String tableName = "table";
+    String expected =
+        "`" + DATASET_PROJECT_ID + "." + PDAO_PREFIX + dataset.getName() + "." + tableName + "`";
+    String actual = BigQueryPdao.bqFullyQualifiedTableName(dataset, tableName);
+    assertThat("Dataset BQ table name is correctly formatted", expected, equalTo(actual));
+  }
+
+  @Test
+  void testBQSnapshotFullyQualifiedTableName() {
+    Snapshot snapshot = mockSnapshot();
+    String tableName = "table";
+    String expected = "`" + SNAPSHOT_PROJECT_ID + "." + snapshot.getName() + "." + tableName + "`";
+    String actual = BigQueryPdao.bqFullyQualifiedTableName(snapshot, tableName);
+    assertThat("Snapshot BQ table name is correctly formatted", expected, equalTo(actual));
+  }
+
+  @Test
+  void testBQDatasetTableName() {
+    Dataset dataset = mockDataset();
+    String tableName = "table";
+    String expected = PDAO_PREFIX + dataset.getName() + "." + tableName;
+    String actual = BigQueryPdao.bqTableName(dataset, tableName);
+    assertThat("Dataset BQ table name is correctly formatted", expected, equalTo(actual));
+  }
+
+  @Test
+  void testBQSnapshotTableName() {
+    Snapshot snapshot = mockSnapshot();
+    String tableName = "table";
+    String expected = snapshot.getName() + "." + tableName;
+    String actual = BigQueryPdao.bqTableName(snapshot, tableName);
+    assertThat("Snapshot BQ table name is correctly formatted", expected, equalTo(actual));
+  }
+
+  private Dataset mockDataset() {
     DatasetTable tbl1 =
         DatasetFixtures.generateDatasetTable(
                 TABLE_1_NAME, TableDataType.STRING, List.of(TABLE_1_COL1_NAME, TABLE_1_COL2_NAME))
@@ -1066,6 +1163,26 @@ public class BigQueryPdaoUnitTest {
     tbl2.getColumns().get(0).id(TABLE_2_COL1_ID);
     tbl2.getColumns().get(1).id(TABLE_2_COL2_ID);
     tbl2.getColumns().get(2).id(TABLE_2_COL3_ID);
+
+    return new Dataset()
+        .id(DATASET_ID)
+        .name(DATASET_NAME)
+        .projectResource(
+            new GoogleProjectResource().profileId(PROFILE_1_ID).googleProjectId(DATASET_PROJECT_ID))
+        .tables(List.of(tbl1, tbl2))
+        .storage(
+            List.of(
+                new GoogleStorageResource(
+                    DATASET_ID,
+                    GoogleCloudResource.BIGQUERY,
+                    GoogleRegion.NORTHAMERICA_NORTHEAST1)));
+  }
+
+  private Snapshot mockSnapshot() {
+    Dataset dataset = mockDataset();
+    List<DatasetTable> tables = dataset.getTables();
+    DatasetTable tbl1 = tables.get(0);
+    DatasetTable tbl2 = tables.get(1);
 
     SnapshotTable snpTbl1 =
         new SnapshotTable().id(SNAPSHOT_TABLE_1_ID).name(tbl1.getName()).columns(tbl1.getColumns());
@@ -1092,22 +1209,8 @@ public class BigQueryPdaoUnitTest {
         .snapshotSources(
             List.of(
                 new SnapshotSource()
-                    .dataset(
-                        new Dataset()
-                            .id(DATASET_ID)
-                            .name(DATASET_NAME)
-                            .projectResource(
-                                new GoogleProjectResource()
-                                    .profileId(PROFILE_1_ID)
-                                    .googleProjectId(DATASET_PROJECT_ID))
-                            .tables(List.of(tbl1, tbl2))
-                            .storage(
-                                List.of(
-                                    new GoogleStorageResource(
-                                        DATASET_ID,
-                                        GoogleCloudResource.BIGQUERY,
-                                        GoogleRegion.NORTHAMERICA_NORTHEAST1))))
-                    .assetSpecification(
+                    .dataset(mockDataset())
+                    .setAssetSpecification(
                         new AssetSpecification()
                             .rootTable(new AssetTable().datasetTable(tbl1))
                             .rootColumn(
@@ -1159,7 +1262,7 @@ public class BigQueryPdaoUnitTest {
     String snapshotName = snapshot.getName();
     DatasetTable table =
         snapshot.getFirstSnapshotSource().getDataset().getTableByName(tableName).orElseThrow();
-    BQTestUtils.mockBQQuery(
+    BQTestUtils.mockBQQueryWithArgs(
         bigQueryProjectSnapshot,
         "SELECT COUNT(1) "
             + "FROM ("
@@ -1176,7 +1279,7 @@ public class BigQueryPdaoUnitTest {
         List.of(Map.of("val", Integer.toString(numRowIds))));
   }
 
-  private Page<FieldValueList> mockPage(List<FieldValueList> listOfFieldValueList) {
+  public static Page<FieldValueList> mockPage(List<FieldValueList> listOfFieldValueList) {
     return new Page<>() {
       @Override
       public boolean hasNextPage() {
